fix Macos